--- a/src/app/pages/drop-places/drop-places.component.css
+++ b/src/app/pages/drop-places/drop-places.component.css
@@ -1,15 +1,23 @@
 .dropzone {
     margin: 1%;
-    display: inline;
+    display: inline-block;
+    width: 300px;
+    height: 200px;
 }
 
 .drop-places {
     align-self: center;
     margin: 2rem;
+    width: 100%;
+    height: 300px;
 }
 
 .dropzone img {
     border: 1px solid red;
     height: 200px;
     width: 300px;
+}
+
+.cdk-drop-list-dragging {
+    height: 120px;
 }
