--- a/src/app/pages/opponent-hand/opponent-hand.component.html
+++ b/src/app/pages/opponent-hand/opponent-hand.component.html
@@ -3,27 +3,27 @@
     <div class="drop-places">
         <div [id]="'pairedDropZone1'"
              class="dropzone">
-            <img [src]="opponentCard1.baseCard.imageUrl">
+            <img [src]="opponentCards[1].baseCard.imageUrl">
             <p>Drag 400m</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
-            <img [src]="opponentCard2.baseCard.imageUrl">
+            <img [src]="opponentCards[2].baseCard.imageUrl">
             <p>Drag 400m</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
-            <img [src]="opponentCard3.baseCard.imageUrl">
+            <img [src]="opponentCards[3].baseCard.imageUrl">
             <p>Drag 400m</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
-            <img [src]="opponentCard4.baseCard.imageUrl">
+            <img [src]="opponentCards[4].baseCard.imageUrl">
             <p>Drag 400m</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
-            <img [src]="opponentCard5.baseCard.imageUrl">
+            <img [src]="opponentCards[5].baseCard.imageUrl">
             <p>Drag 400m</p>
         </div>
     </div>
