add result page and datas

--- a/src/app/pages/cards-pairing/cards-pairing.component.html
+++ b/src/app/pages/cards-pairing/cards-pairing.component.html
@@ -52,7 +52,7 @@
     </div>-->
     </div>
 
-    <app-drop-places></app-drop-places>
+    <!--<app-drop-places></app-drop-places>-->
 </div>
 <button
 (click)="pairCards()">Start races</button>
