--- a/src/app/pages/opponent-hand/opponent-hand.component.html
+++ b/src/app/pages/opponent-hand/opponent-hand.component.html
@@ -4,27 +4,27 @@
         <div [id]="'pairedDropZone1'"
              class="dropzone">
             <img [src]="opponentCards[1].baseCard.imageUrl">
-            <p>Drag 400m</p>
+            <p>{{tracks[1].raceType}}</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
             <img [src]="opponentCards[2].baseCard.imageUrl">
-            <p>Drag 400m</p>
+            <p>{{tracks[2].raceType}}</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
             <img [src]="opponentCards[3].baseCard.imageUrl">
-            <p>Drag 400m</p>
+            <p>{{tracks[3].raceType}}</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
             <img [src]="opponentCards[4].baseCard.imageUrl">
-            <p>Drag 400m</p>
+            <p>{{tracks[4].raceType}}</p>
         </div>
         <div [id]="'pairedDropZone1'"
              class="dropzone">
             <img [src]="opponentCards[5].baseCard.imageUrl">
-            <p>Drag 400m</p>
+            <p>{{tracks[5].raceType}}</p>
         </div>
     </div>
 </div>
