--- a/src/app/pages/races/races.component.html
+++ b/src/app/pages/races/races.component.html
@@ -5,5 +5,5 @@
         [race]=race></app-race>
     <!--<button (click)="startRace()">Start</button>-->
     <button (click)="loadNextRace()">Next</button>
-    <button>Skip all</button>
+    <button (click)="skipAllRaces()">Skip all</button>
 </div>
