--- a/src/app/pages/drop-places/drop-places.component.css
+++ b/src/app/pages/drop-places/drop-places.component.css
@@ -3,6 +3,7 @@
     display: inline-block;
     width: 300px;
     height: 200px;
+    text-align: center;
 }
 
 .drop-places {
@@ -20,4 +21,9 @@
 
 .cdk-drop-list-dragging {
     height: 120px;
+}
+
+.dropzone>p {
+    font-size: large;
+    font-weight: bolder;
 }
