add back navigate

--- a/src/app/pages/cards-pairing/cards-pairing.component.html
+++ b/src/app/pages/cards-pairing/cards-pairing.component.html
@@ -52,7 +52,9 @@
     </div>-->
     </div>
 
-    <!--<app-drop-places></app-drop-places>-->
+    <app-drop-places></app-drop-places>
 </div>
 <button
 (click)="pairCards()">Start races</button>
+<button
+        (click)="backToChooseCards()">Back to choosing cards</button>
