--- a/src/app/pages/challenges/challenges.component.html
+++ b/src/app/pages/challenges/challenges.component.html
@@ -1,11 +1,13 @@
 
-<div class="grid-container">
+<div class="grid-container"
+    *ngFor="let challenge of challenges">
     <!--ide majd for kell, de csak 6db, mert ami done, az eltűnik, lép 1et előre-->
-    <div class="grid-item" id="ch-2023-1" [routerLink]="['../choose-cards']"><h2>2023 #1</h2></div>
-    <div class="grid-item" id="ch-2023-2"><h2>2023 #1</h2></div>
-    <div class="grid-item" id="ch-2023-3"><h2>2023 #1</h2></div>
-    <div class="grid-item" id="ch-2023-4"><h2>2023 #1</h2></div>
-    <div class="grid-item" id="ch-2023-5"><h2>2023 #1</h2></div>
-    <div class="grid-item" id="ch-2023-6"><h2>2023 #1</h2></div>
+    <div class="grid-item" id="ch-2023-1" (click)="toRounds(challenge)"><h2>{{challenge.name}}</h2></div>
+    <!--<div class="grid-item" id="ch-2023-2"><h2>2023 #2</h2></div>
+    <div class="grid-item" id="ch-2023-3"><h2>2023 #3</h2></div>
+    <div class="grid-item" id="ch-2023-4"><h2>2023 #4</h2></div>
+    <div class="grid-item" id="ch-2023-5"><h2>2023 #5</h2></div>
+    <div class="grid-item" id="ch-2023-6"><h2>2023 #6</h2></div>-->
 
 </div>
+<button (click)="backToHome()">Back to home</button>
