--- a/src/app/pages/choose-cards/choose-cards.component.html
+++ b/src/app/pages/choose-cards/choose-cards.component.html
@@ -1,30 +1,19 @@
-<div
-cdkDropListGroup
-class="choose-container">
-    <!--<div class="container">
-        <div class="row">
-            <h2 style="text-align: center">Movies</h2>-->
-            <!--<div  cdkDropList #allmovies="cdkDropList" [cdkDropListData]="nestedArray" [cdkDropListConnectedTo]="[dropZone1, dropZone2, dropZone3, dropZone4, dropZone5]"
-                  (cdkDropListDropped)="onDrop($event)"
-            class="dropzone">
-                <app-card *ngFor="let movie of nestedArray" [playerCard]="movie" cdkDrag></app-card>
-            </div>-->
-            <app-garage
-                class="choose-garage"
-
-                    ></app-garage>
-            <!--<app-garage></app-garage>-->
-        <!--</div>
-    </div>-->
-    <!--<div class="container">
-        <div class="row">
-            <h2 style="text-align: center">Movies to watch</h2>-->
+<div cdkDropListGroup
+        class="choose-container">
+    <app-garage
+            class="choose-garage"
+    ></app-garage>
     <app-drop-places
-    class="choose-drop-places"></app-drop-places>
-        <div class="choose-buttons">
-            <button
-            (click)=rechooseCards()>Rechoose cards</button>
-            <button
-            (click)="gotoPairing()">Go to pairing</button>
-        </div>
+            class="choose-drop-places"></app-drop-places>
+    <div class="choose-buttons">
+        <button
+                (click)=backToRounds()>Back to rounds
+        </button>
+        <button
+                (click)=rechooseCards()>Rechoose cards
+        </button>
+        <button
+                (click)="gotoPairing()">Go to pairing
+        </button>
+    </div>
 </div>
