save placedCards in rounds

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
+<a (click)="toHome()" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+    <button>to home</button>
+</a>
 <button (click)="toAdminPage()">To admin page</button>
+<!--<a href="admin"><button >To admin page</button></a>-->
 <div class="page-container">
     <div class="page-content">
 <!--        <div class="flex-container">-->
