--- a/src/app/pages/races/races.component.html
+++ b/src/app/pages/races/races.component.html
@@ -1,9 +1,6 @@
-<div
-
->
+<div>
     <app-race
-        [race]=race></app-race>
-    <!--<button (click)="startRace()">Start</button>-->
+            [race]=race></app-race>
     <button (click)="loadNextRace()">Next</button>
     <button (click)="skipAllRaces()">Skip all</button>
 </div>
