--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,14 +4,15 @@
     padding: 20px;
     align-items: center;
     justify-content: center;
-    height: calc(100% - 128px); /* Subtracting the header and footer height */
+    height: 1012px; /* Subtracting the header and footer height */
+    width: 1800px;
     /*grid-template-columns: repeat(auto-fit, minmax(calc(33% - 10px), 1fr));*/
     grid-template-columns: repeat(3, 1fr);
 }
 
 .grid-item {
     background-color: #eaeaea;
-    display: flex;
+    display: block;
     height: 100%;
     background-size: cover;
 }
@@ -45,4 +46,29 @@
 
 .challenges {
     background-image: url("src/assets/img/menus/challenges.webp");
+}
+
+
+
+#container {
+    display: inline-block;
+    background-color: green;
+    padding: 0.5vw 1vw;
+}
+.divtext {
+    display: table;
+    color: white;
+    font-family: impact;
+    font-size: 4.2vw;
+}
+
+.no-resize, .resize {
+    width: 140px;
+    height: 100px;
+    border: 1px solid #000;
+    color: #000;
+    float: left;
+    margin-left: 10px;
+    font-size: 30px
+
 }
