--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,16 @@
-
 <div class="grid-container">
     <div class="grid-item races"><h2>PvP races</h2></div>
     <div class="grid-item challenges" [routerLink]="['challenges']"><h2>Challenges</h2></div>
     <div class="grid-item"><h2>3</h2></div>
-    <div class="grid-item garage" [routerLink]="['garage']"><h2>My garage</h2></div>
+    <div class="grid-item garage" (click)="toGarage()"><h2>My garage</h2></div>
     <div class="grid-item shop" [routerLink]="['shop']"><h2>Shop</h2></div>
     <div class="grid-item"><h2>6</h2></div>
 </div>
+<!--<h1>GeeksforGeeks</h1>
+
+<div id="container">
+    <div class="resize">
+        Resize the browser window to see
+        how the font size scales.
+    </div>
+</div>-->
