--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -1,7 +1,29 @@
 
-header, footer {
-    background-color: #333;
-    color: #fff;
+app-header, app-footer {
+    background-color: #dfc2c4;
+    color: #bb2d3b;
     padding: 20px;
-    text-align: center;
+    /*text-align: center;*/
+    height: 5%;
+    width: 100%;
+}
+
+.grid-container-header {
+    display: grid;
+    grid-gap: 10px;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.grid-container-footer {
+    display: grid;
+    grid-gap: 10px;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+    grid-template-columns: repeat(5, 1fr);
 }
