--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -175,6 +175,7 @@ span {
     color: white;
     width: 96%;
     margin: 2%;
+    font-size: smaller;
 }
 
 td {
@@ -186,14 +187,26 @@ td {
     overflow: hidden;
     white-space: nowrap;
 }
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
-    z-index: 999; /* Make sure the overlay is above other content */
-    pointer-events: none; /* This allows mouse events to pass through the overlay */
+.container.disabled {
+    opacity: 0.5; /* Adjust the opacity as needed */
+    pointer-events: none; /* Prevent interactions with the card when disabled */
 }
+
+.front.disabled, .r_wrap.disabled {
+    opacity: 0.5; /* Adjust the opacity as needed */
+    pointer-events: none; /* Prevent interactions with the card when disabled */
+}
+
+.divtextContainer {
+    display: inline-block;
+    background-color: green;
+    padding: 0.5vw 1vw;
+}
+
+.divtext {
+    display: table;
+    color: white;
+    font-family: impact;
+    font-size: 4.2vw;
+}
+
