--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -14,7 +14,7 @@
                     <li>
                         <a data-bs-target="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">BaseCards</span> </a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+                        <ul class="nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                             <li class="w-100" (click)="loadBaseCardsFromFile()">
                                 <button class="nav-link submenu-item">Load from file</button>
                             </li>
@@ -30,14 +30,31 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-table"></i>
-                            <span (click)="testing()" class="ms-1 d-none d-sm-inline">Orders</span></a>
+                        <a data-bs-target="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-speedometer2"></i>
+                            <span class="ms-1 d-none d-sm-inline">Races</span></a>
+                        <ul class="nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
+                            <li class="w-100" >
+                                <button class="nav-link submenu-item">Get challenges</button>
+                            </li>
+                            <li class="w-100" >
+                                <button class="nav-link submenu-item">Create race</button>
+                            </li>
+                            <li class="w-100" >
+                                <button class="nav-link submenu-item">Create round</button>
+                            </li>
+                            <li class="w-100" >
+                                <button class="nav-link submenu-item">Create challenge</button>
+                            </li>
+                            <li class="w-100" >
+                                <button class="nav-link submenu-item">Save to db</button>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+                        <a href="#submenu4" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
                             <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
+                        <ul class="collapse nav flex-column ms-1" id="submenu4" data-bs-parent="#menu">
                             <li class="w-100">
                                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
                             </li>
