--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -1,5 +1,9 @@
-<div class="grid-container">
-    <div></div>
-    <div>id jön a navigáció</div>
-    <div></div>
+<div class="sorting grid-item">
+    <button>Sorting</button>
+</div>
+<div class="filter grid-item">
+    <button>Filter</button>
+</div>
+<div class="search grid-item">
+    <button>Search</button>
 </div>
