--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<div class="grid-item">
+    <button routerLink="/" id="homeButton">
+        <!--<img src="src/assets/img/menus/home.png">-->
+    </button>
+</div>
+<div class="sorting grid-item">
+    <button>Sorting</button>
+</div>
+<div class="filter grid-item">
+    <button>Filter</button>
+</div>
+<div class="search grid-item">
+    <button>Search</button>
+</div>
