--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,5 +1,5 @@
 <app-header class="grid-container-header"></app-header>
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
 
 <app-home></app-home>
 <app-footer class="grid-container-footer"></app-footer>
