gitflow-feature-stash: refine_card_front_data_view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <button>to home</button>
 </a>
 <button (click)="toAdminPage()">To admin page</button>
+<button (click)="getCardsFromDB()">Get cards from DB</button>
 <!--<a href="admin"><button >To admin page</button></a>-->
 <div class="page-container">
     <div class="page-content">
