--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -174,8 +174,8 @@ span {
 
 .front-table {
     color: white;
-    width: 96%;
-    margin: 2%;
+    width: 98%;
+    margin: 1%;
 
 }
 
@@ -184,10 +184,23 @@ td {
 }
 
 .manufacturer-name {
-    max-width: 300px;
+    max-width: 100%;
+    height: 1.8rem;
     overflow: hidden;
-    white-space: nowrap;
+    padding-left: 5px;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-align: center;
 }
+
+.manufacturer-type {
+    max-width: 100%;
+    height: 1.4rem;
+    overflow: hidden;
+    padding-left: 5px;
+    font-size: 1.1rem;
+}
+
 .container.disabled {
     opacity: 0.5; /* Adjust the opacity as needed */
     pointer-events: none; /* Prevent interactions with the card when disabled */
@@ -219,7 +232,20 @@ td {
 }
 
 .front-cell span {
-    /*vertical-align: middle;*/
+    text-align: left;
+    width: 50%;
+    display: inline-block;
+}
 
+.front-cell span:nth-last-of-type(1) {
+    text-align: left;
+    width: 50%;
+    display: inline-block;
+}
 
+.no-resize, .resize {
+    width: 100%;
+
+    color: #FFF;
+    overflow: hidden;
 }
