set field names on card

--- a/src/app/admin/card-attr-fields/card-attr-fields.component.html
+++ b/src/app/admin/card-attr-fields/card-attr-fields.component.html
@@ -17,7 +17,7 @@
      *ngFor="let cardProperty of getObjectEntries(baseCard)"
 >
     <label for="card_attribute_{{cardProperty[0]}}"
-           [innerHTML]='cardProperty[0]'>
+           [innerHTML]='getFieldName([cardProperty[0]])'>
 
     </label>
     <input
